[package]
name = "libbtrfsutil"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "libbtrfsutil bindings"
readme = "README.md"
repository = "https://github.com/zhangyuannie/libbtrfsutil-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
uuid = "0.8"
ffi = {package = "btrfsutil-sys", version = "1.2.1"}
libc = "0.2"
