[package]
name = "libbtrfsutil"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "libbtrfsutil bindings"
readme = "README.md"
repository = "https://github.com/zhangyuannie/libbtrfsutil-rs"

[workspace]
members = ["libbtrfsutil-sys"]

[dependencies]
bitflags = "2"
uuid = "1"
libc = "0.2"

[dependencies.ffi]
package = "libbtrfsutil-sys"
path = "libbtrfsutil-sys"
version = "0.1.0"
