[package]
name = "libbtrfsutil-sys"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "FFI bindings to libbtrfsutil"
repository = "https://github.com/zhangyuannie/libbtrfsutil-rs"
links = "btrfsutil"

[build-dependencies]
pkg-config = "0.3"

[build-dependencies.bindgen]
version = "0.69"
default-features = false
features = ["logging", "runtime", "which-rustfmt"]
